--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@angular/common": "12.0.0",
         "@angular/compiler": "12.0.0",
         "@angular/core": "12.0.0",
+        "@angular/flex-layout": "^12.0.0-beta.35",
         "@angular/forms": "12.0.0",
         "@angular/material": "12.0.0",
         "@angular/material-moment-adapter": "12.0.0",
@@ -37,6 +38,7 @@
         "apexcharts": "3.26.3",
         "crypto-js": "3.3.0",
         "highlight.js": "10.7.2",
+        "jquery": "^3.6.0",
         "lodash-es": "4.17.21",
         "moment": "2.29.1",
         "ng-apexcharts": "1.5.10",
