--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@fullcalendar/moment": "4.4.2",
         "@fullcalendar/rrule": "4.4.2",
         "@fullcalendar/timegrid": "4.4.2",
+        "@ng-select/ng-select": "^7.4.0",
         "@ngneat/transloco": "2.20.1",
         "angular-2-local-storage": "^3.0.2",
         "angularx-social-login": "^4.0.1",
