--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "angular-2-local-storage": "^3.0.2",
         "angularx-social-login": "^4.0.1",
         "apexcharts": "3.26.3",
+        "chart.js": "2.9.4",
+        "ng2-charts": "^2.4.2",
         "crypto-js": "3.3.0",
         "highlight.js": "10.7.2",
         "jquery": "^3.6.0",
@@ -60,7 +62,7 @@
         "@angular-eslint/eslint-plugin-template": "12.0.0",
         "@angular-eslint/schematics": "12.0.0",
         "@angular-eslint/template-parser": "12.0.0",
-        "@angular/cli": "12.0.0",
+        "@angular/cli": "^12.0.0",
         "@angular/compiler-cli": "12.0.0",
         "@angular/language-service": "12.0.0",
         "@tailwindcss/aspect-ratio": "0.2.0",
